fixed bottom margin and lyrics alignment

--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -6,22 +6,16 @@
   padding: 4px 10px;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
 ul li {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin: 10px 0;
 }
 
 .container {
   margin: 30px auto;
   max-width: 100%;
   width: 500px;
+  margin-bottom: 0;
 }
 
 .centered {
